feat(web): wire download links and fix navbar
- Add DOWNLOADS constant to @voca/shared with GitHub latest release URLs
- Wire all download buttons (Hero, FinalCta, Pricing) to release URLs
- Navbar download button scrolls to #download section
- Replace hardcoded GITHUB_URL in Hero with SOCIALS.github
- Add navbar.faq i18n key to all 12 locales
- Use versionless artifactName in electron-builder (Voca-Setup.exe, Voca.dmg)

--- a/packages/web/src/i18n/locales/en.json
+++ b/packages/web/src/i18n/locales/en.json
@@ -2,7 +2,8 @@
   "navbar": {
     "features": "Features",
     "pricing": "Pricing",
-    "download": "Download"
+    "download": "Download",
+    "faq": "FAQ"
   },
   "hero": {
     "badge": "Open source · Free credits included",
