--- a/packages/web/src/i18n/locales/es.json
+++ b/packages/web/src/i18n/locales/es.json
@@ -2,7 +2,8 @@
   "navbar": {
     "features": "Funciones",
     "pricing": "Precios",
-    "download": "Descargar"
+    "download": "Descargar",
+    "faq": "FAQ"
   },
   "hero": {
     "badge": "Código abierto · Créditos gratuitos incluidos",
