--- a/packages/web/src/i18n/locales/hi.json
+++ b/packages/web/src/i18n/locales/hi.json
@@ -2,7 +2,8 @@
   "navbar": {
     "features": "सुविधाएँ",
     "pricing": "मूल्य",
-    "download": "डाउनलोड"
+    "download": "डाउनलोड",
+    "faq": "FAQ"
   },
   "hero": {
     "badge": "ओपन सोर्स · मुफ्त क्रेडिट शामिल",
