--- a/packages/web/src/i18n/locales/it.json
+++ b/packages/web/src/i18n/locales/it.json
@@ -2,7 +2,8 @@
   "navbar": {
     "features": "Funzionalità",
     "pricing": "Prezzi",
-    "download": "Scarica"
+    "download": "Scarica",
+    "faq": "FAQ"
   },
   "hero": {
     "badge": "Open source · Crediti gratuiti inclusi",
