--- a/packages/web/src/i18n/locales/pt.json
+++ b/packages/web/src/i18n/locales/pt.json
@@ -2,7 +2,8 @@
   "navbar": {
     "features": "Recursos",
     "pricing": "Preços",
-    "download": "Baixar"
+    "download": "Baixar",
+    "faq": "FAQ"
   },
   "hero": {
     "badge": "Código aberto · Créditos grátis incluídos",
