--- a/packages/web/src/i18n/locales/de.json
+++ b/packages/web/src/i18n/locales/de.json
@@ -2,7 +2,8 @@
   "navbar": {
     "features": "Funktionen",
     "pricing": "Preise",
-    "download": "Download"
+    "download": "Download",
+    "faq": "FAQ"
   },
   "hero": {
     "badge": "Open Source · Gratis-Guthaben inklusive",
