--- a/packages/web/src/i18n/locales/hi.json
+++ b/packages/web/src/i18n/locales/hi.json
@@ -150,6 +150,7 @@
     "faq": "FAQ",
     "terms": "शर्तें",
     "privacy": "गोपनीयता",
+    "refund": "रिफंड",
     "copyright": "© {{year}} Voca. सर्वाधिकार सुरक्षित।"
   },
   "notFound": {
@@ -186,5 +187,29 @@
     "children": { "heading": "9. बच्चों की गोपनीयता", "content": "सेवा 13 वर्ष से कम उम्र के बच्चों के लिए नहीं है। हम जानबूझकर बच्चों से व्यक्तिगत जानकारी एकत्र नहीं करते।" },
     "changes": { "heading": "10. इस नीति में परिवर्तन", "content": "हम समय-समय पर इस गोपनीयता नीति को अपडेट कर सकते हैं। परिवर्तनों के बाद सेवा का निरंतर उपयोग अपडेटेड नीति की स्वीकृति माना जाएगा।" },
     "contact": { "heading": "11. संपर्क", "content": "इस गोपनीयता नीति के बारे में प्रश्न हों तो <email>contact@usevoca.dev</email> पर हमसे संपर्क करें।" }
+  },
+  "refund": {
+    "title": "रिफंड नीति",
+    "lastUpdated": "अंतिम अपडेट: 26 फरवरी 2026",
+    "trial": {
+      "heading": "1. मुफ्त ट्रायल",
+      "content": "सभी योजनाओं में 3 दिन की मुफ्त ट्रायल शामिल है। ट्रायल अवधि के दौरान आपसे शुल्क नहीं लिया जाएगा। यदि आप ट्रायल समाप्त होने से पहले रद्द करते हैं, तो कोई भुगतान नहीं लिया जाएगा।"
+    },
+    "cancellation": {
+      "heading": "2. रद्दीकरण",
+      "content": "आप कभी भी अपनी सदस्यता रद्द कर सकते हैं। आपका एक्सेस वर्तमान बिलिंग अवधि के अंत तक जारी रहता है, और अगला महीना बस रिन्यू नहीं होगा। कोई रद्दीकरण शुल्क नहीं लगता।"
+    },
+    "refunds": {
+      "heading": "3. रिफंड",
+      "content": "भुगतान हमारे रजिस्टर्ड मर्चेंट Paddle द्वारा प्रोसेस किए जाते हैं। यदि आपको लगता है कि गलती से शुल्क लिया गया या आप रिफंड का अनुरोध करना चाहते हैं, तो कृपया Paddle से सीधे उनके <paddleHelp>सहायता केंद्र</paddleHelp> के माध्यम से संपर्क करें।"
+    },
+    "credits": {
+      "heading": "4. क्रेडिट",
+      "content": "मासिक क्रेडिट हस्तांतरणीय नहीं हैं और अगली बिलिंग अवधि में स्थानांतरित नहीं होते। अप्रयुक्त क्रेडिट रिफंड के पात्र नहीं हैं।"
+    },
+    "contact": {
+      "heading": "5. संपर्क",
+      "content": "इस रिफंड नीति के बारे में प्रश्न हों तो <email>contact@usevoca.dev</email> पर हमसे संपर्क करें।"
+    }
   }
 }
