--- a/packages/web/src/i18n/locales/ja.json
+++ b/packages/web/src/i18n/locales/ja.json
@@ -150,6 +150,7 @@
     "faq": "FAQ",
     "terms": "利用規約",
     "privacy": "プライバシー",
+    "refund": "返金",
     "copyright": "© {{year}} Voca. All rights reserved."
   },
   "notFound": {
@@ -186,5 +187,29 @@
     "children": { "heading": "9. お子様のプライバシー", "content": "サービスは13歳未満のお子様を対象としていません。お子様から意図的に個人情報を収集することはありません。" },
     "changes": { "heading": "10. ポリシーの変更", "content": "本プライバシーポリシーは随時更新される場合があります。変更後もサービスを継続して使用することは、更新されたポリシーへの同意を意味します。" },
     "contact": { "heading": "11. お問い合わせ", "content": "本プライバシーポリシーについてご質問がある場合は、<email>contact@usevoca.dev</email>までお問い合わせください。" }
+  },
+  "refund": {
+    "title": "返金ポリシー",
+    "lastUpdated": "最終更新日：2026年2月26日",
+    "trial": {
+      "heading": "1. 無料トライアル",
+      "content": "すべてのプランに3日間の無料トライアルが含まれます。トライアル期間中は課金されません。トライアル終了前にキャンセルした場合、お支払いは発生しません。"
+    },
+    "cancellation": {
+      "heading": "2. キャンセル",
+      "content": "サブスクリプションはいつでもキャンセルできます。現在の請求期間の終了までアクセスが継続し、翌月は更新されません。キャンセル料はかかりません。"
+    },
+    "refunds": {
+      "heading": "3. 返金",
+      "content": "お支払いは当社の販売代理店であるPaddleが処理します。誤って課金されたと思われる場合、または返金をご希望の場合は、Paddleの<paddleHelp>ヘルプセンター</paddleHelp>から直接お問い合わせください。"
+    },
+    "credits": {
+      "heading": "4. クレジット",
+      "content": "月間クレジットは譲渡不可で、次の請求期間に繰り越されません。未使用のクレジットは返金の対象外です。"
+    },
+    "contact": {
+      "heading": "5. お問い合わせ",
+      "content": "この返金ポリシーについてご質問がある場合は、<email>contact@usevoca.dev</email>までお問い合わせください。"
+    }
   }
 }
