--- a/packages/web/src/i18n/locales/ru.json
+++ b/packages/web/src/i18n/locales/ru.json
@@ -150,6 +150,7 @@
     "faq": "FAQ",
     "terms": "Условия",
     "privacy": "Конфиденциальность",
+    "refund": "Возврат",
     "copyright": "© {{year}} Voca. Все права защищены."
   },
   "notFound": {
@@ -186,5 +187,29 @@
     "children": { "heading": "9. Конфиденциальность детей", "content": "Сервис не предназначен для детей младше 13 лет. Мы сознательно не собираем личную информацию от детей." },
     "changes": { "heading": "10. Изменения политики", "content": "Мы можем время от времени обновлять настоящую Политику конфиденциальности. Продолжение использования Сервиса после изменений означает принятие обновлённой политики." },
     "contact": { "heading": "11. Контакты", "content": "Если у вас есть вопросы по настоящей Политике конфиденциальности, свяжитесь с нами по адресу <email>contact@usevoca.dev</email>." }
+  },
+  "refund": {
+    "title": "Политика возврата",
+    "lastUpdated": "Последнее обновление: 26 февраля 2026",
+    "trial": {
+      "heading": "1. Бесплатный пробный период",
+      "content": "Все планы включают 3-дневный бесплатный пробный период. Во время пробного периода плата не взимается. Если вы отмените подписку до окончания пробного периода, оплата не будет произведена."
+    },
+    "cancellation": {
+      "heading": "2. Отмена",
+      "content": "Вы можете отменить подписку в любое время. Доступ сохраняется до конца текущего расчётного периода, а следующий месяц просто не продлевается. Штрафы за отмену не взимаются."
+    },
+    "refunds": {
+      "heading": "3. Возвраты",
+      "content": "Платежи обрабатываются компанией Paddle, нашим зарегистрированным торговцем. Если вы считаете, что с вас была списана плата по ошибке, или хотите запросить возврат средств, пожалуйста, свяжитесь с Paddle напрямую через их <paddleHelp>центр помощи</paddleHelp>."
+    },
+    "credits": {
+      "heading": "4. Кредиты",
+      "content": "Ежемесячные кредиты не подлежат передаче и не переносятся на следующий расчётный период. Неиспользованные кредиты не подлежат возврату."
+    },
+    "contact": {
+      "heading": "5. Контакты",
+      "content": "Если у вас есть вопросы по настоящей Политике возврата, свяжитесь с нами по адресу <email>contact@usevoca.dev</email>."
+    }
   }
 }
