--- a/packages/web/src/i18n/locales/ko.json
+++ b/packages/web/src/i18n/locales/ko.json
@@ -150,6 +150,7 @@
     "faq": "FAQ",
     "terms": "이용약관",
     "privacy": "개인정보",
+    "refund": "환불",
     "copyright": "© {{year}} Voca. All rights reserved."
   },
   "notFound": {
@@ -186,5 +187,29 @@
     "children": { "heading": "9. 아동 개인정보 보호", "content": "서비스는 13세 미만의 아동을 대상으로 하지 않습니다. 아동의 개인정보를 의도적으로 수집하지 않습니다." },
     "changes": { "heading": "10. 방침 변경", "content": "본 개인정보 처리방침은 수시로 업데이트될 수 있습니다. 변경 후 서비스를 계속 사용하면 업데이트된 방침에 동의한 것으로 간주됩니다." },
     "contact": { "heading": "11. 문의", "content": "본 개인정보 처리방침에 대해 질문이 있으시면 <email>contact@usevoca.dev</email>로 문의해 주세요." }
+  },
+  "refund": {
+    "title": "환불 정책",
+    "lastUpdated": "최종 업데이트: 2026년 2월 26일",
+    "trial": {
+      "heading": "1. 무료 체험",
+      "content": "모든 플랜에는 3일 무료 체험이 포함됩니다. 체험 기간 동안 요금이 부과되지 않습니다. 체험이 종료되기 전에 취소하면 결제가 이루어지지 않습니다."
+    },
+    "cancellation": {
+      "heading": "2. 취소",
+      "content": "언제든지 구독을 취소할 수 있습니다. 현재 결제 기간이 끝날 때까지 액세스가 유지되며, 다음 달은 갱신되지 않습니다. 취소 수수료는 없습니다."
+    },
+    "refunds": {
+      "heading": "3. 환불",
+      "content": "결제는 당사의 공식 판매자인 Paddle이 처리합니다. 잘못 청구되었다고 생각되거나 환불을 요청하려면 Paddle의 <paddleHelp>고객 지원 센터</paddleHelp>를 통해 직접 문의해 주세요."
+    },
+    "credits": {
+      "heading": "4. 크레딧",
+      "content": "월간 크레딧은 양도할 수 없으며 다음 결제 기간으로 이월되지 않습니다. 미사용 크레딧은 환불 대상이 아닙니다."
+    },
+    "contact": {
+      "heading": "5. 문의",
+      "content": "본 환불 정책에 대해 질문이 있으시면 <email>contact@usevoca.dev</email>로 문의해 주세요."
+    }
   }
 }
